# mnist-pilot

./: README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  main.py  model.py  predict.py
backend/configs/: train_settings.py
backend/models/: cnn.py
backend/training/: test.py  train.py
backend/utils/: data_loadoer.py
frontend/: Dockerfile  app.py
